--- a/src/app/ayuda/ayuda.component.scss
+++ b/src/app/ayuda/ayuda.component.scss
@@ -1,55 +1,43 @@
-/* Estilos para el modal */
-ion-modal {
-  --height: 70vh; /* Ajusta la altura al 70% de la altura de la ventana */
-  --width: 70vw; /* Ajusta el ancho al 70% del ancho de la ventana */
-  height: var(--height);
-  width: var(--width);
-  max-height: var(--height);
-  max-width: var(--width);
-  margin: auto;
-  top: 50%; /* Centra verticalmente */
-  left: 50%; /* Centra horizontalmente */
-  transform: translate(-50%, -50%);
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+/* Estilos para el ion-content */
+ion-content {
+  --ion-background-color: linear-gradient(45deg, #e30113, #003770);
+  --ion-text-color: #fff; /* Color del texto */
+  padding: 20px;
 }
 
-/* Estilos para el contenido del modal */
-ion-content {
-  --background: linear-gradient(45deg, #e30113, #003770);
-  text-align: center;
-  padding: 20px;
-  color: white; /* Color del texto dentro del modal */
+/* Estilos para los íconos del menú */
+.menu-icon {
+  font-size: 24px;
+  color: #fff; /* Color del ícono */
+}
+
+/* Estilos para los ítems del menú */
+.menu-item {
+  padding: 15px;
+  border-bottom: 1px solid #ccc; /* Línea divisoria entre elementos */
+  background-color: transparent !important; /* Fondo completamente transparente */
+  color: #fff; /* Color del texto */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu-item:hover {
+  background-color: transparent !important; /* Cambio de color al pasar el ratón por encima */
 }
 
 /* Estilos para el botón de cerrar */
 .close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
   color: red; /* Color del botón de cerrar */
-}
-
-/* Estilos para los elementos dentro del modal */
-ion-item {
-  --background: transparent;
-  --color: white; /* Color del texto del ion-item */
-  --border-color: white; /* Color del borde del ion-item */
-}
-
-ion-item::part(native) {
-  border-color: white; /* Color del borde del ion-item */
-  color: white; /* Color del texto del ion-item */
-}
-
-.list-ios {
-  background: transparent;
 }
 
 /* Estilos para la imagen de ayuda */
 .imagen-ayuda {
   width: 100px;
   display: block;
-  margin: 0 auto; /* Centra la imagen horizontalmente */
+  margin: 20px auto; /* Centra la imagen horizontalmente con un margen */
 }
