--- a/src/app/soporte-tecnico/soporte-tecnico.component.html
+++ b/src/app/soporte-tecnico/soporte-tecnico.component.html
@@ -5,32 +5,45 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-        <h1>Soporte Tecnico</h1>
-      <img src="../../assets/icon/Soporte-Tecnico.png" alt="Soporte Técnico Imagen" class="imagen-soporte">
-    <ion-card>
+  <h1>Soporte Tecnico</h1>
+  <img src="../../assets/icon/Soporte-Tecnico.png" alt="Soporte Técnico Imagen" class="imagen-soporte">
+  <ion-card>
     <ion-card-content>
       <form [formGroup]="soporteForm" (ngSubmit)="enviarSoporte()">
         <ion-item>
-          <ion-label position="floating">Nombre</ion-label>
+          <ion-label position="floating" [ngClass]="{'error': soporteForm.controls['nombre'].invalid && soporteForm.controls['nombre'].touched}">Nombre</ion-label>
           <ion-input formControlName="nombre" type="text"></ion-input>
+          <div *ngIf="soporteForm.controls['nombre'].invalid && soporteForm.controls['nombre'].touched" class="error-message">
+            Por favor, introduce tu nombre.
+          </div>
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-label position="floating" [ngClass]="{'error': soporteForm.controls['correo'].invalid && soporteForm.controls['correo'].touched}">Correo Electrónico</ion-label>
           <ion-input formControlName="correo" type="email"></ion-input>
+          <div *ngIf="soporteForm.controls['correo'].invalid && soporteForm.controls['correo'].touched" class="error-message">
+            Por favor, introduce un correo electrónico válido.
+          </div>
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">Teléfono</ion-label>
-          <ion-input formControlName="telefono" type="tel"></ion-input>
-        </ion-item>
+          <ion-label position="floating" [ngClass]="{'error': soporteForm.controls['telefono'].invalid && soporteForm.controls['telefono'].touched}">Teléfono</ion-label>
+          <ion-input formControlName="telefono" type="number" (keypress)="soloNumeros($event)"></ion-input>
+          <div *ngIf="soporteForm.controls['telefono'].invalid && soporteForm.controls['telefono'].touched" class="error-message">
+            Por favor, introduce un número de teléfono válido.
+          </div>
+        </ion-item>                
 
         <ion-item>
-          <ion-label position="floating">Descripción del Problema</ion-label>
+          <ion-label position="floating" [ngClass]="{'error': soporteForm.controls['descripcionProblema'].invalid && soporteForm.controls['descripcionProblema'].touched}">Descripción del Problema</ion-label>
           <ion-textarea formControlName="descripcionProblema" rows="6"></ion-textarea>
+          <div *ngIf="soporteForm.controls['descripcionProblema'].invalid && soporteForm.controls['descripcionProblema'].touched" class="error-message">
+            Por favor, describe el problema.
+          </div>
         </ion-item>
 
-        <ion-button type="submit" expand="full" class="ion-margin-top">Enviar</ion-button>
+        <ion-button type="submit" [disabled]="!soporteForm.valid" expand="full" class="ion-margin-top">Enviar</ion-button>
+
       </form>
     </ion-card-content>
   </ion-card>
