--- a/src/app/guia/guia.component.scss
+++ b/src/app/guia/guia.component.scss
@@ -25,4 +25,10 @@ ion-content {
   .sub-title {
     font-weight: bold;
   }
-  
+  .imagenes{
+    display: block;
+    margin: auto;
+    width: 200px; 
+    margin-top: 10px; 
+    margin-bottom: 10px;
+  }  
