--- a/src/app/guia/guia.component.html
+++ b/src/app/guia/guia.component.html
@@ -16,6 +16,7 @@
     <ion-card-content>
       <h2 class="sub-title"><strong>1. Acceder al Apartado de Datos:</strong></h2>
       <p>Navegar a la sección de "Datos" en la aplicación.</p>
+      <ion-img src="../../assets/Pasos/Paso 1.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>2. Ingresar Datos de Simulación:</strong></h2>
       <p>En la pestaña de datos, proporcionar los parámetros necesarios para la simulación:</p>
@@ -25,8 +26,9 @@
         <li>Especificar el porcentaje de retorno mínimo aceptable (TREMA).</li>
         <li>Presionar el botón "Insertar" para generar el cuadro con valores pesimistas, optimistas y más probables.</li>
       </ul>
+      <ion-img src="../../assets/Pasos/Paso 1-1.png" class="imagenes"></ion-img>
     </ion-card-content>
-  
+    
 
   
     <ion-card-header>
@@ -35,19 +37,24 @@
     <ion-card-content>
       <h2 class="sub-title"><strong>1. Acceder al Apartado de Simulación:</strong></h2>
       <p>Ir a la sección de "Simulación" en la aplicación.</p>
+      <ion-img src="../../assets/Pasos/Paso 2-1.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>2. Configurar Parámetros de Simulación:</strong></h2>
       <p>Ingresar la duración en años para simular inversiones y retornos.</p>
+      <ion-img src="../../assets/Pasos/Paso 2-2.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>3. Iniciar Simulación:</strong></h2>
       <p>Presionar el botón "Simular datos" para ejecutar la simulación.</p>
+      <ion-img src="../../assets/Pasos/Paso 2-3.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>4. Revisar Resultados:</strong></h2>
       <p>Observar la conclusión de la simulación para determinar la recomendación de inversión.</p>
       <p>Examinar la tabla de resultados de la simulación y los resultados finales para tomar decisiones informadas.</p>
+      <ion-img src="../../assets/Pasos/paso 2-4.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>5. Exportar Resultados (Opcional):</strong></h2>
       <p>Si se desea, presionar el botón "Exportar" para descargar los resultados en un archivo PDF.</p>
+      <ion-img src="../../assets/Pasos/paso 2-5.png" class="imagenes"></ion-img>
     </ion-card-content>
   
 
@@ -57,9 +64,11 @@
     <ion-card-content>
       <h2 class="sub-title"><strong>1. Regresar a la Pestaña de Llenado de Datos:</strong></h2>
       <p>Si se desea iniciar una nueva simulación con datos diferentes, regresar a la pestaña de "Datos".</p>
+      <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>2. Limpiar Datos Anteriores:</strong></h2>
       <p>Presionar el botón "Limpiar" para borrar todos los datos ingresados anteriormente.</p>
+      <ion-img src="../../assets/Pasos/Pasos 3-1.png" class="imagenes"></ion-img>
 
       <h2 class="sub-title"><strong>3. Repetir Pasos 1 y 2:</strong></h2>
       <p>Repetir los pasos 1 y 2 para ingresar nuevos datos y ejecutar una nueva simulación.</p>
