--- a/src/app/guia/guia.component.html
+++ b/src/app/guia/guia.component.html
@@ -73,7 +73,10 @@
       <h2 class="sub-title"><strong>3. Repetir Pasos 1 y 2:</strong></h2>
       <p>Repetir los pasos 1 y 2 para ingresar nuevos datos y ejecutar una nueva simulación.</p>
     </ion-card-content>
- 
+    <ion-button (click)="volverAlMenu()" expand="block" class="custom-button">
+      <ion-icon slot="start" name="play-outline"></ion-icon>
+  Inicia tu simulación
+    </ion-button>
 </ion-content>
 
 
