--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,13 +21,13 @@
               <ion-label>Guia/Tutorial</ion-label>
             </ion-item>
             <ion-item routerLink="/info" routerDirection="root">
-              <ion-label>Informacion para la simulacion</ion-label>
+              <ion-label>Información para la simulación</ion-label>
             </ion-item>
             <ion-item routerLink="/datos" routerDirection="root">
               <ion-label>Datos</ion-label>
             </ion-item>
             <ion-item routerLink="/simulacion" routerDirection="root">
-              <ion-label>Simulacion</ion-label>
+              <ion-label>Simulación</ion-label>
             </ion-item>
             <ion-item routerLink="/ayuda" routerDirection="root">
               <ion-label>Ayuda</ion-label>
